--- a/HospitalManagementSystem/HospitalManagementSystem.csproj
+++ b/HospitalManagementSystem/HospitalManagementSystem.csproj
@@ -129,6 +129,12 @@
       <DependentUpon>compounder.cs</DependentUpon>
     </Compile>
     <Compile Include="connection.cs" />
+    <Compile Include="CoverPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CoverPage.Designer.cs">
+      <DependentUpon>CoverPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Delete.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -235,6 +241,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="compounder.resx">
       <DependentUpon>compounder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CoverPage.resx">
+      <DependentUpon>CoverPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Delete.resx">
       <DependentUpon>Delete.cs</DependentUpon>
