--- a/HospitalManagementSystem/HospitalManagementSystem.csproj
+++ b/HospitalManagementSystem/HospitalManagementSystem.csproj
@@ -86,6 +86,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AccountHome.Designer.cs">
+      <DependentUpon>AccountHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AccountPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AccountPage.Designer.cs">
+      <DependentUpon>AccountPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Add.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -121,6 +133,18 @@
     </Compile>
     <Compile Include="appoinForm.Designer.cs">
       <DependentUpon>appoinForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CanteenHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CanteenHome.Designer.cs">
+      <DependentUpon>CanteenHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CanteenPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CanteenPage.Designer.cs">
+      <DependentUpon>CanteenPage.cs</DependentUpon>
     </Compile>
     <Compile Include="compounder.cs">
       <SubType>Form</SubType>
@@ -165,6 +189,12 @@
     <Compile Include="editData.Designer.cs">
       <DependentUpon>editData.cs</DependentUpon>
     </Compile>
+    <Compile Include="EmployeeHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmployeeHome.Designer.cs">
+      <DependentUpon>EmployeeHome.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -177,11 +207,23 @@
     <Compile Include="HomePage.Designer.cs">
       <DependentUpon>HomePage.cs</DependentUpon>
     </Compile>
+    <Compile Include="IncomeHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IncomeHome.Designer.cs">
+      <DependentUpon>IncomeHome.cs</DependentUpon>
+    </Compile>
     <Compile Include="nurse_page.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="nurse_page.Designer.cs">
       <DependentUpon>nurse_page.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OutgoingHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OutgoingHome.Designer.cs">
+      <DependentUpon>OutgoingHome.cs</DependentUpon>
     </Compile>
     <Compile Include="PatientPage.cs">
       <SubType>Form</SubType>
@@ -221,6 +263,12 @@
     <Compile Include="Welcome.Designer.cs">
       <DependentUpon>Welcome.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AccountHome.resx">
+      <DependentUpon>AccountHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AccountPage.resx">
+      <DependentUpon>AccountPage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Add.resx">
       <DependentUpon>Add.cs</DependentUpon>
     </EmbeddedResource>
@@ -238,6 +286,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="appoinForm.resx">
       <DependentUpon>appoinForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CanteenHome.resx">
+      <DependentUpon>CanteenHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CanteenPage.resx">
+      <DependentUpon>CanteenPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="compounder.resx">
       <DependentUpon>compounder.cs</DependentUpon>
@@ -260,14 +314,23 @@
     <EmbeddedResource Include="editData.resx">
       <DependentUpon>editData.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="EmployeeHome.resx">
+      <DependentUpon>EmployeeHome.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="HomePage.resx">
       <DependentUpon>HomePage.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="IncomeHome.resx">
+      <DependentUpon>IncomeHome.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="nurse_page.resx">
       <DependentUpon>nurse_page.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OutgoingHome.resx">
+      <DependentUpon>OutgoingHome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PatientPage.resx">
       <DependentUpon>PatientPage.cs</DependentUpon>
